// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RentalAssistance with rental assistances matches snapshot 1`] = `
<DocumentFragment>
  <form
    novalidate=""
  >
    <div
      class="form-grid row expand margin-top--half"
    >
      <div
        class="small-12 column"
      >
        <div
          class="table-container-overflow-scroll"
        >
          <table
            class="td-light td-plain th-plain rental-assistances"
            role="grid"
            style="background: transparent;"
          >
            <thead>
              <tr>
                <th
                  class=""
                  scope="col"
                >
                  Recipient
                </th>
                <th
                  class=""
                  scope="col"
                >
                  Type
                </th>
                <th
                  class=""
                  scope="col"
                >
                  Amount
                </th>
                <th
                  class=""
                  scope="col"
                >
                  Recurring
                </th>
                <th
                  class=""
                  scope="col"
                />
              </tr>
            </thead>
            <tbody>
              <tr
                aria-expanded="false"
                class="tr-expand"
                data-testid="expandable-table-row"
              >
                <td
                  class=""
                >
                  Test Tester
                </td>
                <td
                  class=""
                >
                  Compass Family
                </td>
                <td
                  class=""
                >
                  $100.00
                </td>
                <td
                  class=""
                >
                  Yes
                </td>
                <td>
                  <button
                    class="button button-link action-link"
                    type="button"
                  >
                    Edit
                  </button>
                </td>
              </tr>
              <tr
                aria-hidden="true"
                class="tr-expand-content"
                data-testid="expandable-table-row-button"
              >
                <td
                  class="td-expand-nested no-padding"
                  colspan="5"
                >
                  <div
                    class="inline-modal padding-left--2x padding-right--2x white-background"
                    data-testid="rental-assistance-form"
                    id="rental-assistance-edit-form-0"
                  >
                    <div
                      class="form-grid row expand"
                    >
                      <div
                        class="form-grid_item column small-6"
                      >
                        <div
                          class="form-group"
                        >
                          <label
                            class="form-label"
                            for="form-rental_assistances.0.recipient"
                            id="label-rental_assistances-0.recipient"
                          >
                            Recipient
                          </label>
                          <select
                            class="rental-assistance-recipient"
                            id="form-rental_assistances.0.recipient"
                            name="rental_assistances.0.recipient"
                          >
                            <option
                              value=""
                            >
                              Select One...
                            </option>
                            <option
                              value="123"
                            >
                              Test Tester
                            </option>
                          </select>
                        </div>
                      </div>
                    </div>
                    <div
                      class="form-grid row expand"
                    >
                      <div
                        class="form-grid_item column small-6"
                      >
                        <div
                          class="form-group"
                        >
                          <label
                            class="form-label"
                            for="form-rental_assistances.0.type_of_assistance"
                            id="label-rental_assistances-0.type_of_assistance"
                          >
                            Type of Assistance
                          </label>
                          <select
                            class="rental-assistance-type"
                            id="form-rental_assistances.0.type_of_assistance"
                            name="rental_assistances.0.type_of_assistance"
                          >
                            <option
                              value=""
                            >
                              Select One...
                            </option>
                            <option
                              value="Catholic Charities"
                            >
                              Catholic Charities
                            </option>
                            <option
                              value="Compass Family"
                            >
                              Compass Family
                            </option>
                            <option
                              value="Glide"
                            >
                              Glide
                            </option>
                            <option
                              value="Hamilton Family"
                            >
                              Hamilton Family
                            </option>
                            <option
                              value="Homeless Prenatal"
                            >
                              Homeless Prenatal
                            </option>
                            <option
                              value="HOPWA"
                            >
                              HOPWA
                            </option>
                            <option
                              value="Q Foundation: First Month’s Rent"
                            >
                              Q Foundation: First Month’s Rent
                            </option>
                            <option
                              value="Q Foundation: Move-in Deposit"
                            >
                              Q Foundation: Move-in Deposit
                            </option>
                            <option
                              value="Q Foundation: Person with Disability Rent Subsidy"
                            >
                              Q Foundation: Person with Disability Rent Subsidy
                            </option>
                            <option
                              value="Q Foundation: Senior Rent Subsidy"
                            >
                              Q Foundation: Senior Rent Subsidy
                            </option>
                            <option
                              value="San Francisco AIDS Foundation"
                            >
                              San Francisco AIDS Foundation
                            </option>
                            <option
                              value="Section 8 HCV (tenant) voucher"
                            >
                              Section 8 HCV (tenant) voucher
                            </option>
                            <option
                              value="Self-Help for the Elderly"
                            >
                              Self-Help for the Elderly
                            </option>
                            <option
                              value="VASH voucher"
                            >
                              VASH voucher
                            </option>
                            <option
                              value="Other"
                            >
                              Other
                            </option>
                          </select>
                        </div>
                      </div>
                    </div>
                    <div
                      class="form-grid row expand"
                    >
                      <div
                        class="form-grid_item column small-6"
                      >
                        <div
                          class="form-group"
                        >
                          <label
                            class="form-label"
                            for="assistance_amount"
                            id="label-rental_assistances-0.assistance_amount"
                          >
                            Assistance Amount
                          </label>
                          <input
                            class=""
                            id="assistance_amount"
                            name="rental_assistances.0.assistance_amount"
                            placeholder="Enter Amount"
                            type="text"
                            value="100"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="form-grid row expand"
                    >
                      <div
                        class="form-grid_item column small-6"
                      >
                        <div
                          class="rental-assistance-recurring radio-group-inline"
                        >
                          <label
                            class="form-label"
                            for="form-rental_assistances.0.recurring_assistance"
                            id="label-rental_assistances-0.recurring_assistance"
                          >
                            Recurring Assistance
                          </label>
                          <p
                            class="radio-inline"
                          >
                            <input
                              checked=""
                              id="rental_assistances.0.recurring_assistance-new-yes"
                              name="rental_assistances.0.recurring_assistance"
                              type="radio"
                              value="Yes"
                            />
                            <label
                              class="radio-inline_label"
                              for="rental_assistances.0.recurring_assistance-new-yes"
                            >
                              Yes
                            </label>
                          </p>
                          <p
                            class="radio-inline"
                          >
                            <input
                              id="rental_assistances.0.recurring_assistance-new-no"
                              name="rental_assistances.0.recurring_assistance"
                              type="radio"
                              value="No"
                            />
                            <label
                              class="radio-inline_label"
                              for="rental_assistances.0.recurring_assistance-new-no"
                            >
                              No
                            </label>
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="form-grid row expand"
                    >
                      <div
                        class="form-grid_item column"
                      >
                        <button
                          class="primary margin-right tiny margin-bottom-none"
                          id="rental-assistance-save"
                          style="padding-top: 0px; padding-bottom: 0px;"
                          type="button"
                        >
                          <div
                            style="display: flex; align-items: center; justify-content: space-between; width: 100%;"
                          >
                            <span
                              style="margin-top: 1rem; margin-bottom: 1rem; overflow: auto; flex-grow: 1; text-align: center;"
                            >
                              Save
                            </span>
                          </div>
                        </button>
                        <button
                          class="secondary tiny margin-bottom-none"
                          id="rental-assistance-cancel"
                          style="padding-top: 0px; padding-bottom: 0px;"
                          type="button"
                        >
                          <div
                            style="display: flex; align-items: center; justify-content: space-between; width: 100%;"
                          >
                            <span
                              style="margin-top: 1rem; margin-bottom: 1rem; overflow: auto; flex-grow: 1; text-align: center;"
                            >
                              Cancel
                            </span>
                          </div>
                        </button>
                        <button
                          class="alert-fill right tiny margin-bottom-none"
                          id="rental-assistance-delete"
                          style="padding-top: 0px; padding-bottom: 0px;"
                          type="button"
                        >
                          <div
                            style="display: flex; align-items: center; justify-content: space-between; width: 100%;"
                          >
                            <span
                              style="margin-top: 1rem; margin-bottom: 1rem; overflow: auto; flex-grow: 1; text-align: center;"
                            >
                              Delete
                            </span>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      class="form-grid row expand"
    >
      <div
        class="form-grid_item column small-6"
      >
        <button
          class="small"
          id="add-rental-assistance"
          style="padding-top: 0px; padding-bottom: 0px;"
          type="button"
        >
          <div
            style="display: flex; align-items: center; justify-content: space-between; width: 100%;"
          >
            <span
              style="margin-top: 1rem; margin-bottom: 1rem; overflow: auto; flex-grow: 1; text-align: center;"
            >
              Add Rental Assistance
            </span>
          </div>
        </button>
        <div
          class="margin-top--half"
        />
        <span
          class="form-note shift-up"
        >
          Rental Assistance includes recurring vouchers and subsidies, as well as one-time grants and other assistance.
        </span>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RentalAssistanceForm when it already exists on salesforce matches snapshot 1`] = `
<DocumentFragment>
  <form
    novalidate=""
  >
    <div
      class="inline-modal padding-left--2x padding-right--2x white-background"
      data-testid="rental-assistance-form"
      id="rental-assistance-edit-form-0"
    >
      <div
        class="form-grid row expand"
      >
        <div
          class="form-grid_item column small-6"
        >
          <div
            class="form-group"
          >
            <label
              class="form-label"
              for="form-rental_assistances.0.recipient"
              id="label-rental_assistances-0.recipient"
            >
              Recipient
            </label>
            <select
              class="rental-assistance-recipient"
              id="form-rental_assistances.0.recipient"
              name="rental_assistances.0.recipient"
            >
              <option
                value=""
              >
                Select One...
              </option>
              <option
                value="123"
              >
                Test Tester
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        class="form-grid row expand"
      >
        <div
          class="form-grid_item column small-6"
        >
          <div
            class="form-group"
          >
            <label
              class="form-label"
              for="form-rental_assistances.0.type_of_assistance"
              id="label-rental_assistances-0.type_of_assistance"
            >
              Type of Assistance
            </label>
            <select
              class="rental-assistance-type"
              id="form-rental_assistances.0.type_of_assistance"
              name="rental_assistances.0.type_of_assistance"
            >
              <option
                value=""
              >
                Select One...
              </option>
              <option
                value="Catholic Charities"
              >
                Catholic Charities
              </option>
              <option
                value="Compass Family"
              >
                Compass Family
              </option>
              <option
                value="Glide"
              >
                Glide
              </option>
              <option
                value="Hamilton Family"
              >
                Hamilton Family
              </option>
              <option
                value="Homeless Prenatal"
              >
                Homeless Prenatal
              </option>
              <option
                value="HOPWA"
              >
                HOPWA
              </option>
              <option
                value="Q Foundation: First Month’s Rent"
              >
                Q Foundation: First Month’s Rent
              </option>
              <option
                value="Q Foundation: Move-in Deposit"
              >
                Q Foundation: Move-in Deposit
              </option>
              <option
                value="Q Foundation: Person with Disability Rent Subsidy"
              >
                Q Foundation: Person with Disability Rent Subsidy
              </option>
              <option
                value="Q Foundation: Senior Rent Subsidy"
              >
                Q Foundation: Senior Rent Subsidy
              </option>
              <option
                value="San Francisco AIDS Foundation"
              >
                San Francisco AIDS Foundation
              </option>
              <option
                value="Section 8 HCV (tenant) voucher"
              >
                Section 8 HCV (tenant) voucher
              </option>
              <option
                value="Self-Help for the Elderly"
              >
                Self-Help for the Elderly
              </option>
              <option
                value="VASH voucher"
              >
                VASH voucher
              </option>
              <option
                value="Other"
              >
                Other
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        class="form-grid row expand"
      >
        <div
          class="form-grid_item column small-6"
        >
          <div
            class="form-group"
          >
            <label
              class="form-label"
              for="assistance_amount"
              id="label-rental_assistances-0.assistance_amount"
            >
              Assistance Amount
            </label>
            <input
              class=""
              id="assistance_amount"
              name="rental_assistances.0.assistance_amount"
              placeholder="Enter Amount"
              type="text"
              value="100"
            />
          </div>
        </div>
      </div>
      <div
        class="form-grid row expand"
      >
        <div
          class="form-grid_item column small-6"
        >
          <div
            class="rental-assistance-recurring radio-group-inline"
          >
            <label
              class="form-label"
              for="form-rental_assistances.0.recurring_assistance"
              id="label-rental_assistances-0.recurring_assistance"
            >
              Recurring Assistance
            </label>
            <p
              class="radio-inline"
            >
              <input
                checked=""
                id="rental_assistances.0.recurring_assistance-new-yes"
                name="rental_assistances.0.recurring_assistance"
                type="radio"
                value="Yes"
              />
              <label
                class="radio-inline_label"
                for="rental_assistances.0.recurring_assistance-new-yes"
              >
                Yes
              </label>
            </p>
            <p
              class="radio-inline"
            >
              <input
                id="rental_assistances.0.recurring_assistance-new-no"
                name="rental_assistances.0.recurring_assistance"
                type="radio"
                value="No"
              />
              <label
                class="radio-inline_label"
                for="rental_assistances.0.recurring_assistance-new-no"
              >
                No
              </label>
            </p>
          </div>
        </div>
      </div>
      <div
        class="form-grid row expand"
      >
        <div
          class="form-grid_item column"
        >
          <button
            class="primary margin-right tiny margin-bottom-none"
            id="rental-assistance-save"
            style="padding-top: 0px; padding-bottom: 0px;"
            type="button"
          >
            <div
              style="display: flex; align-items: center; justify-content: space-between; width: 100%;"
            >
              <span
                style="margin-top: 1rem; margin-bottom: 1rem; overflow: auto; flex-grow: 1; text-align: center;"
              >
                Save
              </span>
            </div>
          </button>
          <button
            class="secondary tiny margin-bottom-none"
            id="rental-assistance-cancel"
            style="padding-top: 0px; padding-bottom: 0px;"
            type="button"
          >
            <div
              style="display: flex; align-items: center; justify-content: space-between; width: 100%;"
            >
              <span
                style="margin-top: 1rem; margin-bottom: 1rem; overflow: auto; flex-grow: 1; text-align: center;"
              >
                Cancel
              </span>
            </div>
          </button>
          <button
            class="alert-fill right tiny margin-bottom-none"
            id="rental-assistance-delete"
            style="padding-top: 0px; padding-bottom: 0px;"
            type="button"
          >
            <div
              style="display: flex; align-items: center; justify-content: space-between; width: 100%;"
            >
              <span
                style="margin-top: 1rem; margin-bottom: 1rem; overflow: auto; flex-grow: 1; text-align: center;"
              >
                Delete
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RentalAssistanceForm when it is new matches snapshot 1`] = `
<DocumentFragment>
  <form
    novalidate=""
  >
    <div
      class="inline-modal padding-left--2x padding-right--2x white-background margin-bottom--3halves"
      data-testid="rental-assistance-form"
      id="rental-assistance-new-form"
    >
      <div
        class="form-grid row expand"
      >
        <div
          class="form-grid_item column small-6"
        >
          <div
            class="form-group"
          >
            <label
              class="form-label"
              for="form-rental_assistances.0.recipient"
              id="label-rental_assistances-0.recipient"
            >
              Recipient
            </label>
            <select
              class="rental-assistance-recipient"
              id="form-rental_assistances.0.recipient"
              name="rental_assistances.0.recipient"
            >
              <option
                value=""
              >
                Select One...
              </option>
              <option
                value="123"
              >
                Test Tester
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        class="form-grid row expand"
      >
        <div
          class="form-grid_item column small-6"
        >
          <div
            class="form-group"
          >
            <label
              class="form-label"
              for="form-rental_assistances.0.type_of_assistance"
              id="label-rental_assistances-0.type_of_assistance"
            >
              Type of Assistance
            </label>
            <select
              class="rental-assistance-type"
              id="form-rental_assistances.0.type_of_assistance"
              name="rental_assistances.0.type_of_assistance"
            >
              <option
                value=""
              >
                Select One...
              </option>
              <option
                value="Catholic Charities"
              >
                Catholic Charities
              </option>
              <option
                value="Compass Family"
              >
                Compass Family
              </option>
              <option
                value="Glide"
              >
                Glide
              </option>
              <option
                value="Hamilton Family"
              >
                Hamilton Family
              </option>
              <option
                value="Homeless Prenatal"
              >
                Homeless Prenatal
              </option>
              <option
                value="HOPWA"
              >
                HOPWA
              </option>
              <option
                value="Q Foundation: First Month’s Rent"
              >
                Q Foundation: First Month’s Rent
              </option>
              <option
                value="Q Foundation: Move-in Deposit"
              >
                Q Foundation: Move-in Deposit
              </option>
              <option
                value="Q Foundation: Person with Disability Rent Subsidy"
              >
                Q Foundation: Person with Disability Rent Subsidy
              </option>
              <option
                value="Q Foundation: Senior Rent Subsidy"
              >
                Q Foundation: Senior Rent Subsidy
              </option>
              <option
                value="San Francisco AIDS Foundation"
              >
                San Francisco AIDS Foundation
              </option>
              <option
                value="Section 8 HCV (tenant) voucher"
              >
                Section 8 HCV (tenant) voucher
              </option>
              <option
                value="Self-Help for the Elderly"
              >
                Self-Help for the Elderly
              </option>
              <option
                value="VASH voucher"
              >
                VASH voucher
              </option>
              <option
                value="Other"
              >
                Other
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        class="form-grid row expand"
      >
        <div
          class="form-grid_item column small-6"
        >
          <div
            class="form-group"
          >
            <label
              class="form-label"
              for="assistance_amount"
              id="label-rental_assistances-0.assistance_amount"
            >
              Assistance Amount
            </label>
            <input
              class=""
              id="assistance_amount"
              name="rental_assistances.0.assistance_amount"
              placeholder="Enter Amount"
              type="text"
              value="100"
            />
          </div>
        </div>
      </div>
      <div
        class="form-grid row expand"
      >
        <div
          class="form-grid_item column small-6"
        >
          <div
            class="rental-assistance-recurring radio-group-inline"
          >
            <label
              class="form-label"
              for="form-rental_assistances.0.recurring_assistance"
              id="label-rental_assistances-0.recurring_assistance"
            >
              Recurring Assistance
            </label>
            <p
              class="radio-inline"
            >
              <input
                checked=""
                id="rental_assistances.0.recurring_assistance-new-yes"
                name="rental_assistances.0.recurring_assistance"
                type="radio"
                value="Yes"
              />
              <label
                class="radio-inline_label"
                for="rental_assistances.0.recurring_assistance-new-yes"
              >
                Yes
              </label>
            </p>
            <p
              class="radio-inline"
            >
              <input
                id="rental_assistances.0.recurring_assistance-new-no"
                name="rental_assistances.0.recurring_assistance"
                type="radio"
                value="No"
              />
              <label
                class="radio-inline_label"
                for="rental_assistances.0.recurring_assistance-new-no"
              >
                No
              </label>
            </p>
          </div>
        </div>
      </div>
      <div
        class="form-grid row expand"
      >
        <div
          class="form-grid_item column"
        >
          <button
            class="primary margin-right tiny margin-bottom-none"
            id="rental-assistance-save"
            style="padding-top: 0px; padding-bottom: 0px;"
            type="button"
          >
            <div
              style="display: flex; align-items: center; justify-content: space-between; width: 100%;"
            >
              <span
                style="margin-top: 1rem; margin-bottom: 1rem; overflow: auto; flex-grow: 1; text-align: center;"
              >
                Save
              </span>
            </div>
          </button>
          <button
            class="secondary tiny margin-bottom-none"
            id="rental-assistance-cancel"
            style="padding-top: 0px; padding-bottom: 0px;"
            type="button"
          >
            <div
              style="display: flex; align-items: center; justify-content: space-between; width: 100%;"
            >
              <span
                style="margin-top: 1rem; margin-bottom: 1rem; overflow: auto; flex-grow: 1; text-align: center;"
              >
                Cancel
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
